# CMakeXamlSandbox

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  build.ps1  build.py  pipeline.ps1
cmake/: CreateSelfSignedCert.ps1  ExportCerficate.ps1  Package.appxmanifest  Package.appxmanifest.in
dependencies/: CMakeLists.txt
output/: build.ps1  build_vs15.ps1  generate.ps1  generate_arm64.ps1  generate_vs14.ps1  generate_vs15.ps1
source/: App.xaml  App.xaml.cpp  App.xaml.h  CMakeSandboxMain.cpp  CMakeSandboxMain.h  DirectXPage.xaml  DirectXPage.xaml.cpp  DirectXPage.xaml.h  OpenGLES.cpp  OpenGLES.h  OpenGLESPage.xaml  OpenGLESPage.xaml.cpp  OpenGLESPage.xaml.h  pch.h
source/Content/: Sample3DSceneRenderer.cpp  Sample3DSceneRenderer.h  SampleFpsTextRenderer.cpp  SampleFpsTextRenderer.h  ShaderStructures.h  SimpleRenderer.cpp  SimpleRenderer.h
